# nap

./: .gitattributes  .gitignore  CMakeLists.txt  check_build_environment.sh  create_app.sh  create_module.sh  generate_solution.bat  generate_solution.sh  package_app.sh  readme.md
.github/workflows/: build-and-test.yml
apps/test/: CMakeLists.txt
apps/test/src/: main.cpp
audioplugins/ExampleAudioPlugin/: CMakeLists.txt  PluginProcessor.h
audioplugins/napstatic/: CMakeLists.txt  macros_and_functions.cmake
audioplugins/napstatic/src/: napstatic.cpp
cmake/: Info.plist.in  codesign.cmake  codesign_target.cmake  default_path_mapping.json  module_utilities.cmake  nap_app.cmake  nap_module.cmake  nap_utilities.cmake  nap_vst.cmake  qtconfig.cmake  setup.cmake
cmake/find_modules/: Findnaprtti.cmake
cmake/src/: project.h
core/: CMakeLists.txt
core/src/nap/: core.cpp  core.h  group.h  logger.h  modulemanager.cpp  projectinfo.cpp  projectinfo.h  resourcemanager.cpp  resourcemanager.h  service.cpp  service.h
core/src/nap/native/: core_ext.cpp  modulecache_ext.cpp  resourcemanager_ext.cpp
core/src/nap/osx/: core_env.cpp  directorywatcher.cpp  module.cpp
demos/audioplayback/: app.json
demos/audiovisualfft/: app.json
demos/computeflocking/: app.json
demos/exampleplugin/: CMakeLists.txt  vst.json
demos/exampleplugin/data/: objects.json
napvst/: CMakeLists.txt
qt/: CMakeLists.txt
qt/src/napqt/: qtutils.cpp
rtti/: CMakeLists.txt
rtti/src/rtti/: jsonwriter.cpp  objectptr.h  path.cpp
static/: CMakeLists.txt
static/src/: napstatic.cpp
system_modules/napasio/: module_extra.cmake
system_modules/napaudio/: module_extra.cmake
system_modules/napaudio/src/audio/component/: outputcomponent.cpp
system_modules/napaudio/src/audio/core/: audiopin.h
system_modules/napaudio/src/audio/node/: levelmeternode.h
system_modules/napaudio/src/audio/service/: audioservice.cpp  audioservice.h
system_modules/napaudio/src/audio/utility/: rampedvalue.h
system_modules/napfft/: module.json  module_extra.cmake
system_modules/napfft/src/: fftaudionodecomponent.cpp
system_modules/napfont/: module_extra.cmake
system_modules/napimgui/: module_extra.cmake
system_modules/napimgui/src/: guiappeventhandler.cpp  imguiservice.cpp  imguiservice.h
system_modules/napimgui/src/imgui/: imconfig.h  imgui_impl_vulkan.cpp
system_modules/napinput/src/: keyboard.h
system_modules/napmath/: module_extra.cmake
system_modules/napmidi/: module_extra.cmake
system_modules/naposc/src/: oscpacketlistener.cpp  oscreceivingsocket.cpp
system_modules/napparameter/src/: parameternumeric.h
system_modules/napparametergui/src/: parametergui.cpp
system_modules/napportaudio/src/audio/service/: portaudioservice.cpp  portaudioservice.h
system_modules/naprender/: module_extra.cmake
system_modules/naprender/src/: renderservice.cpp  renderservice.h  rendertarget.h  renderwindow.cpp  renderwindow.h  sdlhelpers.cpp  sdlhelpers.h  shader.cpp  videodriver.cpp  videodriver.h
system_modules/naprenderadvanced/: module_extra.cmake
system_modules/naprenderadvanced/src/: testcubemap.cpp
system_modules/napscene/src/: component.h  componentptr.h  scene.cpp  scene.h
system_modules/napsdlinput/: module_extra.cmake
system_modules/napsdlinput/src/: sdlappeventhandler.cpp  sdleventconverter.cpp  sdleventconverter.h  sdlinputservice.cpp  sdlinputservice.h
system_modules/napsequencegui/: module_extra.cmake
tools/buildsystem/: test.sh
tools/buildsystem/check_build_environment/macos/: check_build_environment.py
tools/buildsystem/check_build_environment/win64/: check_build_environment.bat  check_build_environment_continued.py
tools/buildsystem/common/: sh_shared.sh
tools/buildsystem/template_app/: app.json
tools/buildsystem/template_app/data/: objects.json
tools/buildsystem/template_app/module/: module.json
tools/buildsystem/template_app/module/src/: naptemplate.cpp
tools/buildsystem/template_app/src/: app.cpp  app.h
tools/fbxconverter/: CMakeLists.txt
tools/napkin/: CMakeLists.txt
tools/napkin/resources/applets/: path_mapping.json
tools/napkin/src/: applet.h  appletsdleventsink.cpp  main.cpp  napkinglobals.h  napkinutils.cpp  naputils.cpp
tools/napkin/src/panels/: renderpanel.cpp
tools/vdd/: install_vdd.ps1
utility/src/utility/: dllexport.h  fileutils.cpp  threading.cpp  threading.h
vst/src/: audioplugin.cpp  audioplugin.h  nappluginbridge.cpp  nappluginbridge.h  nappluginview.cpp  nappluginview.h  project.h.in  sdlpoller.h  version.h.in
vst/tools/: add_debug_entitlement.sh  install_vst3sdk_dependencies.sh
vstplugins/exampleplugin/: CMakeLists.txt
vstplugins/exampleplugin/data/: objects.json
vstplugins/exampleplugin/src/: project.h  version.h
vstplugins/fmsynthplugin/: CMakeLists.txt  vst.json
vstplugins/fmsynthplugin/src/: fmsynthplugin.cpp  fmsynthplugin.h  project.h  version.h
